--- a/JsonTranslatorApp/Sass/index.scss
+++ b/JsonTranslatorApp/Sass/index.scss
@@ -1,5 +1,5 @@
-@import "bootstrap/bootstrap.min.css";
-@import "bootstrap-icons/bootstrap-icons.min.css";
+@import "bootstrap";
+@import "bootstrap-icons";
 
 .test{
     background-color: yellow !important;
