--- a/JsonTranslatorApp/Sass/index.scss
+++ b/JsonTranslatorApp/Sass/index.scss
@@ -1,6 +1,14 @@
 @import "bootstrap";
 @import "bootstrap-icons";
 
-.test{
-    background-color: yellow !important;
+.spinner {
+    border: 16px solid lightblue;
+    border-top: 16px solid darkblue;
+    border-radius: 50%;
+    width: 80px;
+    height: 80px;
+    animation: spin 700ms linear infinite;
+    top: 40%;
+    left: 45%;
+    position: absolute;
 }
