--- a/JsonTranslatorApp/App.razor
+++ b/JsonTranslatorApp/App.razor
@@ -1,4 +1,8 @@
-﻿<Router AppAssembly="@typeof(App).Assembly">
+﻿@using JsonTranslatorApp.Services.IndexedDb
+
+@inject IndexedDbService IndexedDbService
+
+<Router AppAssembly="@typeof(App).Assembly">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)"/>
         <FocusOnNavigate RouteData="@routeData" Selector="h1"/>
@@ -10,3 +14,13 @@
         </LayoutView>
     </NotFound>
 </Router>
+
+@code {
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (firstRender)
+        {
+            await IndexedDbService.InitializeAsync();
+        }
+    }
+}
