--- a/JsonTranslatorApp/_Imports.razor
+++ b/JsonTranslatorApp/_Imports.razor
@@ -9,3 +9,4 @@
 @using JsonTranslatorApp
 @using JsonTranslatorApp.Layout
 @using JsonTranslatorApp.Components.Importer
+@using JsonTranslatorApp.Components.Message
