--- a/LanguageFileTranslatorApp/App.razor
+++ b/LanguageFileTranslatorApp/App.razor
@@ -1,4 +1,4 @@
-﻿@using JsonTranslatorApp.Services.IndexedDb
+﻿@using LanguageFileTranslatorApp.Services.IndexedDb
 
 @inject IndexedDbService IndexedDbService
 
