--- a/LanguageFileTranslatorApp/_Imports.razor
+++ b/LanguageFileTranslatorApp/_Imports.razor
@@ -6,7 +6,7 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using JsonTranslatorApp
-@using JsonTranslatorApp.Layout
-@using JsonTranslatorApp.Components.Importer
-@using JsonTranslatorApp.Components.Message
+@using LanguageFileTranslatorApp
+@using LanguageFileTranslatorApp.Layout
+@using LanguageFileTranslatorApp.Components.Importer
+@using LanguageFileTranslatorApp.Components.Message
