--- a/LanguageFileTranslatorApp/App.razor
+++ b/LanguageFileTranslatorApp/App.razor
@@ -1,6 +1,6 @@
 ﻿@using LanguageFileTranslatorApp.Services.IndexedDb
 
-@inject IndexedDbService IndexedDbService
+@inject IIndexedDbService IndexedDbService
 
 <Router AppAssembly="@typeof(App).Assembly">
     <Found Context="routeData">
