--- a/LanguageFileTranslatorApp/_Imports.razor
+++ b/LanguageFileTranslatorApp/_Imports.razor
@@ -10,3 +10,4 @@
 @using LanguageFileTranslatorApp.Layout
 @using LanguageFileTranslatorApp.Components.Importer
 @using LanguageFileTranslatorApp.Components.Message
+@using LanguageFileTranslatorApp.Components.Navigator
