--- a/LanguageFileTranslatorApp/Layout/NavMenu.razor
+++ b/LanguageFileTranslatorApp/Layout/NavMenu.razor
@@ -1,30 +1,32 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="">Language File Translator</a>
-        <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+﻿<div class="sidebar position-sticky top-0 start-0 end-0 z-2">
+    <div class="navbar d-sm-none px-4">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="">Language File Translator</a>
+            <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        </div>
     </div>
-</div>
 
-<div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
-    <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="translate" Match="NavLinkMatch.All">
-                <i class="bi bi-translate"></i> Translate
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="import">
-                <i class="bi bi-arrow-down-square"></i> Import
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="import">
-                <i class="bi bi-arrow-up-square"></i> Export
-            </NavLink>
-        </div>
-    </nav>
+    <div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
+        <nav class="flex-column">
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="translate" Match="NavLinkMatch.All">
+                    <i class="bi bi-translate"></i> Translate
+                </NavLink>
+            </div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="import">
+                    <i class="bi bi-arrow-down-square"></i> Import
+                </NavLink>
+            </div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="import">
+                    <i class="bi bi-arrow-up-square"></i> Export
+                </NavLink>
+            </div>
+        </nav>
+    </div>
 </div>
 
 @code {
