--- a/LanguageFileTranslatorApp/Sass/index.scss
+++ b/LanguageFileTranslatorApp/Sass/index.scss
@@ -1,14 +1,1 @@
-@import "bootstrap";
-@import "bootstrap-icons";
-
-.spinner {
-    border: 16px solid lightblue;
-    border-top: 16px solid darkblue;
-    border-radius: 50%;
-    width: 80px;
-    height: 80px;
-    animation: spin 700ms linear infinite;
-    top: 40%;
-    left: 45%;
-    position: absolute;
-}
+@import 'AppStyle';
