--- a/LanguageFileTranslatorApp/AppStyle/index.scss
+++ b/LanguageFileTranslatorApp/AppStyle/index.scss
@@ -9,7 +9,7 @@
   --green: #478c5c;
   --dark-green: #013a20;
   --fresh-green: #bacc81;
-  --light-green: #cdd193;
+  --light-green: #00d27e;
   --sky-blue: #6bdff0;
   --ocean-blue: #189ab4;
   --purple: #9f85d3;
