--- a/LanguageFileTranslatorApp/Layout/NavMenu.razor
+++ b/LanguageFileTranslatorApp/Layout/NavMenu.razor
@@ -1,8 +1,8 @@
 ﻿<div class="sidebar position-sticky top-0 start-0 end-0 z-2">
     <div class="navbar d-sm-none px-4">
         <div class="container-fluid">
-            <a class="nav-link" href="">Language File Translator</a>
-            <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
+            <a class="nav-link text-white" href="">Language File Translator</a>
+            <button title="Navigation menu" class="navbar-toggler bg-light" @onclick="ToggleNavMenu">
                 <span class="navbar-toggler-icon"></span>
             </button>
         </div>
