--- a/LanguageFileTranslatorApp/Layout/MainLayout.razor
+++ b/LanguageFileTranslatorApp/Layout/MainLayout.razor
@@ -6,7 +6,7 @@
 
     <main>
         <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About Me</a>
+            <a href="https://github.com/bartvanhoey" target="_blank">About Me</a>
         </div>
 
         <article class="content px-4">
