--- a/LanguageFileTranslatorApp/Components/Navigator/Navigator.razor
+++ b/LanguageFileTranslatorApp/Components/Navigator/Navigator.razor
@@ -2,17 +2,17 @@
     <div class="row pb-1">
         <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
             <div class="btn-group mr-2" role="group" aria-label="First group">
-                <button type="button" class="btn btn-secondary" @onclick="GotoFirstByKey">
+                <button type="button" class="btn btn-primary" @onclick="GotoFirstByKey">
                     <i class="bi bi-chevron-bar-left"></i>
                 </button>
-                <button type="button" class="btn btn-secondary" @onclick="GotoPreviousByKey">
+                <button type="button" class="btn btn-primary" @onclick="GotoPreviousByKey">
                     <i class="bi bi-chevron-left"></i>
                 </button>
-                <button type="button" class="btn btn-secondary key-btn-width">Key</button>
-                <button type="button" class="btn btn-secondary" @onclick="GotoNextByKey">
+                <button type="button" class="btn btn-primary key-btn-width">Key</button>
+                <button type="button" class="btn btn-primary" @onclick="GotoNextByKey">
                     <i class="bi bi-chevron-right"></i>
                 </button>
-                <button type="button" class="btn btn-secondary" @onclick="GotoLastByKey">
+                <button type="button" class="btn btn-primary" @onclick="GotoLastByKey">
                     <i class="bi bi-chevron-bar-right"></i>
                 </button>
             </div>
@@ -21,17 +21,17 @@
     <div class="row">
         <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
             <div class="btn-group mr-2" role="group" aria-label="Second group">
-                <button type="button" class="btn btn-secondary" @onclick="GotoFirstById">
+                <button type="button" class="btn btn-primary" @onclick="GotoFirstById">
                     <i class="bi bi-chevron-bar-left"></i>
                 </button>
-                <button type="button" class="btn btn-secondary" @onclick="GotoPreviousById">
+                <button type="button" class="btn btn-primary" @onclick="GotoPreviousById">
                     <i class="bi bi-chevron-left"></i>
                 </button>
-                <button type="button" class="btn btn-secondary id-btn-width">Id</button>
-                <button type="button" class="btn btn-secondary" @onclick="GotoNextById">
+                <button type="button" class="btn btn-primary id-btn-width">Id</button>
+                <button type="button" class="btn btn-primary" @onclick="GotoNextById">
                     <i class="bi bi-chevron-right"></i>
                 </button>
-                <button type="button" class="btn btn-secondary" @onclick="GotoLastById">
+                <button type="button" class="btn btn-primary" @onclick="GotoLastById">
                     <i class="bi bi-chevron-bar-right"></i>
                 </button>
             </div>
