--- a/LanguageFileTranslatorApp/Layout/MainLayout.razor
+++ b/LanguageFileTranslatorApp/Layout/MainLayout.razor
@@ -5,8 +5,8 @@
     </div>
 
     <main>
-        <div class="top-row px-4">
-            <a href="https://github.com/bartvanhoey" target="_blank">About Me</a>
+        <div class="top-row px-4 d-none d-sm-block">
+            <a href="https://github.com/bartvanhoey" target="_blank" class="float-end pt-3 text-white">About Me</a>
         </div>
 
         <article class="content px-4">
