--- a/LanguageFileTranslatorApp/Layout/MainLayout.razor.css
+++ b/LanguageFileTranslatorApp/Layout/MainLayout.razor.css
@@ -8,12 +8,8 @@ main {
     flex: 1;
 }
 
-.sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #1d574d 70%);
-}
-
 .top-row {
-    background-color: #f7f7f7;
+    background-color: var(--uranian-blue);
     border-bottom: 1px solid #d6d5d5;
     justify-content: flex-end;
     height: 3.5rem;
