--- a/LanguageFileTranslatorApp/Layout/MainLayout.razor
+++ b/LanguageFileTranslatorApp/Layout/MainLayout.razor
@@ -6,7 +6,7 @@
 
     <main>
         <div class="top-row px-4 d-none d-sm-block">
-            <a href="https://github.com/bartvanhoey" target="_blank" class="float-end pt-3 text-white">About Me</a>
+            <a href="https://github.com/bartvanhoey" target="_blank" class="float-end pt-3 text-white">about me</a>
         </div>
 
         <article class="content px-4">
