--- a/LanguageFileTranslatorApp/Layout/NavMenu.razor
+++ b/LanguageFileTranslatorApp/Layout/NavMenu.razor
@@ -1,7 +1,7 @@
 ﻿<div class="sidebar position-sticky top-0 start-0 end-0 z-2">
     <div class="navbar d-sm-none px-4">
         <div class="container-fluid">
-            <a class="nav-link text-white" href="">Language File Translator</a>
+            <a class="nav-link text-white" href="">language file translator</a>
             <button title="Navigation menu" class="navbar-toggler bg-light" @onclick="ToggleNavMenu">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -10,7 +10,7 @@
 
     <div class="navbar d-none d-sm-block text-center">
         <div class="nav-item">
-            <a class="nav-link text-white" href="">Language File Translator</a>
+            <a class="nav-link text-white" href="">language file translator</a>
         </div>
     </div>
 
@@ -18,17 +18,22 @@
         <nav class="flex-column">
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="translate" Match="NavLinkMatch.All">
-                    <i class="bi bi-translate"></i> Translate
+                    <i class="bi bi-translate"></i> translate
                 </NavLink>
             </div>
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="import">
-                    <i class="bi bi-arrow-down-square"></i> Import
+                    <i class="bi bi-arrow-down-square"></i> import
                 </NavLink>
             </div>
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="export">
-                    <i class="bi bi-arrow-up-square"></i> Export
+                    <i class="bi bi-arrow-up-square"></i> export
+                </NavLink>
+            </div>
+            <div class="nav-item px-3 bottom-nav-menu">
+                <NavLink class="nav-link" href="settings">
+                    <i class="bi bi-gear"></i> settings
                 </NavLink>
             </div>
         </nav>
