--- a/LanguageFileTranslatorApp/Pages/Import.razor
+++ b/LanguageFileTranslatorApp/Pages/Import.razor
@@ -1,8 +1,8 @@
 ﻿@page "/import"
 
-<PageTitle>import files</PageTitle>
+<PageTitle>import</PageTitle>
 
-<h1>import files</h1>
+<h1>import</h1>
 
 <hr>
 
