--- a/LanguageFileTranslatorApp/Pages/Export.razor
+++ b/LanguageFileTranslatorApp/Pages/Export.razor
@@ -1,7 +1,7 @@
 ﻿@page "/Export"
 
-<PageTitle>export files</PageTitle>
+<PageTitle>export</PageTitle>
 
-<h1>export files</h1>
+<h1>export</h1>
 
 <hr>
