--- a/LanguageFileTranslatorApp/Layout/NavMenu.razor
+++ b/LanguageFileTranslatorApp/Layout/NavMenu.razor
@@ -16,22 +16,22 @@
 
     <div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
         <nav class="flex-column">
-            <div class="nav-item px-3">
+            <div class="nav-item  px-sm-1 px-md-2 px-lg-3 py-sm-0 py-md-2 py-lg-3">
                 <NavLink class="nav-link" href="translate" Match="NavLinkMatch.All">
                     <i class="bi bi-translate"></i> translate
                 </NavLink>
             </div>
-            <div class="nav-item px-3">
+            <div class="nav-item  px-sm-1 px-md-2 px-lg-3 py-sm-0 py-md-2 py-lg-3">
                 <NavLink class="nav-link" href="import">
                     <i class="bi bi-arrow-down-square"></i> import
                 </NavLink>
             </div>
-            <div class="nav-item px-3">
+            <div class="nav-item  px-sm-1 px-md-2 px-lg-3 py-sm-0 py-md-2 py-lg-3">
                 <NavLink class="nav-link" href="export">
                     <i class="bi bi-arrow-up-square"></i> export
                 </NavLink>
             </div>
-            <div class="nav-item px-3 bottom-nav-menu">
+            <div class="nav-item px-sm-1 bottom-nav-menu">
                 <NavLink class="nav-link" href="settings">
                     <i class="bi bi-gear"></i> settings
                 </NavLink>
