--- a/LanguageFileTranslatorApp/Pages/Translate.razor
+++ b/LanguageFileTranslatorApp/Pages/Translate.razor
@@ -9,3 +9,10 @@
 
 <Navigator OnLanguageEntryChanged="LanguageEntryChanged"></Navigator>
 
+<hr>
+
+@foreach (var item in LanguageEntryItems)
+{
+    <input type="text" value="@item.Value">
+}
+
