--- a/LanguageFileTranslatorApp/Components/Navigator/Navigator.razor
+++ b/LanguageFileTranslatorApp/Components/Navigator/Navigator.razor
@@ -7,7 +7,7 @@
             <button type="button" class="btn btn-primary" @onclick="GotoPreviousByKey">
                 <i class="bi bi-chevron-left"></i>
             </button>
-            <button type="button" class="btn btn-primary navigator-btn-width">Key</button>
+            <button type="button" class="btn btn-primary navigator-btn-width">key</button>
             <button type="button" class="btn btn-primary" @onclick="GotoNextByKey">
                 <i class="bi bi-chevron-right"></i>
             </button>
@@ -26,7 +26,7 @@
             <button type="button" class="btn btn-primary" @onclick="GotoPreviousById">
                 <i class="bi bi-chevron-left"></i>
             </button>
-            <button type="button" class="btn btn-primary navigator-btn-width">Id</button>
+            <button type="button" class="btn btn-primary navigator-btn-width">id</button>
             <button type="button" class="btn btn-primary" @onclick="GotoNextById">
                 <i class="bi bi-chevron-right"></i>
             </button>
@@ -41,7 +41,7 @@
 {
     <div class="row g-1 pt-4">
         <div class="col-sm-1 col-2">
-            <Label class="form-control text-center navigator-label" disabled="disabled">Id</Label>
+            <Label class="form-control text-center dark-white-label" disabled="disabled">id</Label>
         </div>
         <div class="col-sm-11 col-10">
             <input class="form-control" disabled="disabled" value="@LanguageEntry.Id"/>
@@ -49,7 +49,7 @@
     </div>
     <div class="row pt-1 g-1">
         <div class="col-sm-1 col-2">
-            <Label class="form-control text-center navigator-label" disabled="disabled">Key</Label>
+            <Label class="form-control text-center dark-white-label" disabled="disabled">key</Label>
         </div>
         <div class="col-sm-11 col-10">
             <input class="form-control key-input" value="@LanguageEntry.Key"/>
