--- a/LanguageFileTranslatorApp/Pages/Translate.razor
+++ b/LanguageFileTranslatorApp/Pages/Translate.razor
@@ -6,13 +6,19 @@
 <h1>translate</h1>
 
 <hr>
-
 <Navigator OnLanguageEntryChanged="LanguageEntryChanged"></Navigator>
-
-<hr>
 
 @foreach (var item in LanguageEntryItems)
 {
-    <input type="text" value="@item.Value">
+    <div class="row g-1 pt-2">
+        <div class="col-md-1 col-4">
+            <Label class="form-control text-center dark-white-label" disabled="disabled">@item.Culture </Label>
+        </div>
+        <div class="col-md-10 col-12 order-last order-md-1">
+            <input class="form-control value-input" type="text" value="@item.Value">
+        </div>
+        <div class="col-md-1 col-4 order-md-last">
+            <button class="btn btn-outline-primary w-100" disabled>...</button>
+        </div>
+    </div>
 }
-
