--- a/LanguageFileTranslatorApp/Components/Navigator/Navigator.razor
+++ b/LanguageFileTranslatorApp/Components/Navigator/Navigator.razor
@@ -40,18 +40,18 @@
 @if (LanguageEntry != null)
 {
     <div class="row g-1 pt-4">
-        <div class="col-sm-1 col-2">
+        <div class="col-2">
             <Label class="form-control text-center dark-white-label" disabled="disabled">id</Label>
         </div>
-        <div class="col-sm-11 col-10">
+        <div class="col-10">
             <input class="form-control" disabled="disabled" value="@LanguageEntry.Id"/>
         </div>
     </div>
-    <div class="row pt-1 g-1">
-        <div class="col-sm-1 col-2">
+    <div class="row pt-1 pb-2 g-1">
+        <div class="col-2">
             <Label class="form-control text-center dark-white-label" disabled="disabled">key</Label>
         </div>
-        <div class="col-sm-11 col-10">
+        <div class="col-10">
             <input class="form-control key-input" value="@LanguageEntry.Key"/>
         </div>
     </div>
