--- a/LanguageFileTranslatorApp/Layout/NavMenu.razor
+++ b/LanguageFileTranslatorApp/Layout/NavMenu.razor
@@ -1,7 +1,12 @@
 ﻿<div class="sidebar position-sticky top-0 start-0 end-0 z-2">
     <div class="navbar d-sm-none px-4">
         <div class="container-fluid">
-            <a class="nav-link text-white" href="">language file translator</a>
+            <div class="d-none d-sm-block">
+                <a class="nav-link text-white" href="">language file translator</a>
+            </div>
+            <div class="d-block d-sm-none">
+                <a class="nav-link text-white" href="">language translator</a>
+            </div>
             <button title="Navigation menu" class="navbar-toggler bg-light" @onclick="ToggleNavMenu">
                 <span class="navbar-toggler-icon"></span>
             </button>
