--- a/LanguageFileTranslatorApp/_Imports.razor
+++ b/LanguageFileTranslatorApp/_Imports.razor
@@ -11,3 +11,4 @@
 @using LanguageFileTranslatorApp.Components.Importer
 @using LanguageFileTranslatorApp.Components.Message
 @using LanguageFileTranslatorApp.Components.Navigator
+@using LanguageFileTranslatorApp.Components.Confirm
