--- a/LanguageFileTranslatorApp/Components/Navigator/Navigator.razor
+++ b/LanguageFileTranslatorApp/Components/Navigator/Navigator.razor
@@ -1,21 +1,55 @@
 ﻿<div class="row pb-1">
-    <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-        <div class="btn-group mr-2" role="group" aria-label="First group">
-            <button type="button" class="btn btn-primary" @onclick="GotoFirstByKey">
-                <i class="bi bi-chevron-bar-left"></i>
-            </button>
-            <button type="button" class="btn btn-primary" @onclick="GotoPreviousByKey">
-                <i class="bi bi-chevron-left"></i>
-            </button>
-            <button type="button" class="btn btn-primary navigator-btn-width">key</button>
-            <button type="button" class="btn btn-primary" @onclick="GotoNextByKey">
-                <i class="bi bi-chevron-right"></i>
-            </button>
-            <button type="button" class="btn btn-primary" @onclick="GotoLastByKey">
-                <i class="bi bi-chevron-bar-right"></i>
-            </button>
+    
+        <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+            <div class="btn-group mr-1" role="group" aria-label="First group">
+                <button type="button" class="btn btn-primary" @onclick="GotoFirstByKey">
+                    <i class="bi bi-chevron-bar-left"></i>
+                </button>
+                <button type="button" class="btn btn-primary" @onclick="GotoPreviousByKey">
+                    <i class="bi bi-chevron-left"></i>
+                </button>
+                <button type="button" class="btn btn-primary navigator-btn-width">key</button>
+                <button type="button" class="btn btn-primary" @onclick="GotoNextByKey">
+                    <i class="bi bi-chevron-right"></i>
+                </button>
+                <button type="button" class="btn btn-primary" @onclick="GotoLastByKey">
+                    <i class="bi bi-chevron-bar-right"></i>
+                </button>
+            </div>
+
+            @* <div class="input-group"> *@
+            @*     <div class="form-outline"> *@
+            @*         <input type="search" id="form1" class="form-control" /> *@
+            @*         <label class="form-label" for="form1">Search</label> *@
+            @*     </div> *@
+            @*     <button type="button" class="btn btn-primary"> *@
+            @*         <i class="bi bi-search"></i> *@
+            @*     </button> *@
+            @* </div> *@
+
+            <div class="input-group ms-2">
+                <input type="text" class="form-control" placeholder="Search"
+                       aria-describedby="button-addon">
+                <button class="btn btn-secondary" type="button" id="button-addon"><i class="bi bi-search"></i></button>
+            </div>
+            
+            
+            <div class="btn-group ms-2" role="group" aria-label="second group">
+                <button type="button" class="btn btn-primary" @onclick="GotoFirstByKey">
+                    <i class="bi bi-copy"></i> Copy
+                </button>
+                <button type="button" class="btn btn-primary" @onclick="GotoPreviousByKey">
+                    <i class="bi bi-trash"></i> Delete
+                </button>
+                <button type="button" class="btn btn-primary" @onclick="GotoNextByKey">
+                    <i class="bi bi-plus-circle"></i> Add New
+                </button>
+            </div>
         </div>
-    </div>
+        
+    
+
+    
 </div>
 <div class="row">
     <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
