--- a/LanguageFileTranslatorApp/Components/Navigator/Navigator.razor
+++ b/LanguageFileTranslatorApp/Components/Navigator/Navigator.razor
@@ -1,7 +1,42 @@
 ﻿<div class="row pb-1">
+    <div class="col-xs-9 col-sm-12 col-md-2">
+        <div class="input-group">
+            <input type="text" class="form-control" placeholder="Search"
+                   aria-describedby="button-addon">
+            <button class="btn btn-secondary" type="button" id="button-addon">
+                <i class="bi bi-search"></i>
+            </button>
+        </div>
+    </div>
     
+    <div class="col-xs-3 col-sm-12 col-md-5">
         <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-            <div class="btn-group mr-1" role="group" aria-label="First group">
+            <div class="btn-group" role="group" aria-label="second group">
+                <button type="button" class="btn btn-primary d-none d-sm-block" @onclick="GotoFirstByKey">
+                    <i class="bi bi-copy"></i> Copy
+                </button>
+                <button type="button" class="btn btn-primary d-none d-sm-block" @onclick="GotoPreviousByKey">
+                    <i class="bi bi-trash"></i> Delete
+                </button>
+                <button type="button" class="btn btn-primary d-none d-sm-block" @onclick="GotoNextByKey">
+                    <i class="bi bi-plus-circle"></i> Add New
+                </button>
+
+                <button type="button" class="btn btn-primary d-block d-sm-none" @onclick="GotoFirstByKey">
+                    <i class="bi bi-copy"></i>
+                </button>
+                <button type="button" class="btn btn-primary d-block d-sm-none" @onclick="GotoPreviousByKey">
+                    <i class="bi bi-trash"></i>
+                </button>
+                <button type="button" class="btn btn-primary d-block d-sm-none" @onclick="GotoNextByKey">
+                    <i class="bi bi-plus-circle"></i>
+                </button>
+            </div>
+        </div>
+    </div>
+    <div class="col-xs-12 col-sm-12 col-md-5">
+        <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+            <div class="btn-group" role="group" aria-label="First group">
                 <button type="button" class="btn btn-primary" @onclick="GotoFirstByKey">
                     <i class="bi bi-chevron-bar-left"></i>
                 </button>
@@ -16,41 +51,11 @@
                     <i class="bi bi-chevron-bar-right"></i>
                 </button>
             </div>
-
-            @* <div class="input-group"> *@
-            @*     <div class="form-outline"> *@
-            @*         <input type="search" id="form1" class="form-control" /> *@
-            @*         <label class="form-label" for="form1">Search</label> *@
-            @*     </div> *@
-            @*     <button type="button" class="btn btn-primary"> *@
-            @*         <i class="bi bi-search"></i> *@
-            @*     </button> *@
-            @* </div> *@
-
-            <div class="input-group ms-2">
-                <input type="text" class="form-control" placeholder="Search"
-                       aria-describedby="button-addon">
-                <button class="btn btn-secondary" type="button" id="button-addon"><i class="bi bi-search"></i></button>
-            </div>
-            
-            
-            <div class="btn-group ms-2" role="group" aria-label="second group">
-                <button type="button" class="btn btn-primary" @onclick="GotoFirstByKey">
-                    <i class="bi bi-copy"></i> Copy
-                </button>
-                <button type="button" class="btn btn-primary" @onclick="GotoPreviousByKey">
-                    <i class="bi bi-trash"></i> Delete
-                </button>
-                <button type="button" class="btn btn-primary" @onclick="GotoNextByKey">
-                    <i class="bi bi-plus-circle"></i> Add New
-                </button>
-            </div>
         </div>
-        
-    
-
-    
+    </div>
 </div>
+
+
 <div class="row">
     <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
         <div class="btn-group mr-2" role="group" aria-label="Second group">
