--- a/LanguageFileTranslatorApp/Components/Navigator/Navigator.razor
+++ b/LanguageFileTranslatorApp/Components/Navigator/Navigator.razor
@@ -15,28 +15,10 @@
             <button type="button" class="btn btn-primary" @onclick="GotoLastByKey">
                 <i class="bi bi-chevron-bar-right"></i>
             </button>
-    <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-        <div class="btn-group" role="group" aria-label="First group">
-            <button type="button" class="btn btn-primary" @onclick="GotoFirstByKey">
-                <i class="bi bi-chevron-bar-left"></i>
-            </button>
-            <button type="button" class="btn btn-primary" @onclick="GotoPreviousByKey">
-                <i class="bi bi-chevron-left"></i>
-            </button>
-            <button type="button" class="btn btn-primary navigator-btn-width">key</button>
-            <button type="button" class="btn btn-primary" @onclick="GotoNextByKey">
-                <i class="bi bi-chevron-right"></i>
-            </button>
-            <button type="button" class="btn btn-primary" @onclick="GotoLastByKey">
-                <i class="bi bi-chevron-bar-right"></i>
-            </button>
         </div>
     </div>
 
 </div>
-<div class="row pb-1">
-    <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-        <div class="btn-group mr-2" role="group" aria-label="Second group">
 <div class="row pb-1">
     <div class="btn-toolbar" role="toolbar" aria-label="Id Navigating Toolbar">
         <div class="btn-group mr-2" role="group" aria-label="IdNavigatingGroup">
@@ -55,51 +37,6 @@
             </button>
         </div>
     </div>
-
-
-</div>
-
-
-<div class="row pt-2">
-    <div class="col-6 col-xs-8 col-sm-12 col-md-3">
-        <div class="input-group">
-            <input type="text" class="form-control" placeholder="Search"
-                   aria-describedby="button-addon">
-            <button class="btn btn-secondary" type="button" id="button-addon">
-                <i class="bi bi-search"></i>
-            </button>
-        </div>
-    </div>
-
-    <div class="col-6 col-xs-4 col-sm-12 col-md-9 pt-sm-2" >
-        <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-            <div class="btn-group" role="group" aria-label="second group">
-                <div class="d-none d-sm-block">
-                    <button type="button" class="btn btn-primary" @onclick="GotoFirstByKey">
-                        <i class="bi bi-copy"></i> Copy
-                    </button>
-                    <button type="button" class="btn btn-primary" @onclick="GotoPreviousByKey">
-                        <i class="bi bi-trash"></i> Delete
-                    </button>
-                    <button type="button" class="btn btn-primary" @onclick="GotoNextByKey">
-                        <i class="bi bi-plus-circle"></i> Add New
-                    </button>
-                </div>
-                <div class="d-block d-sm-none">
-                    <button type="button" class="btn btn-primary" @onclick="GotoFirstByKey">
-                        <i class="bi bi-copy"></i>
-                    </button>
-                    <button type="button" class="btn btn-primary" @onclick="GotoPreviousByKey">
-                        <i class="bi bi-trash"></i>
-                    </button>
-                    <button type="button" class="btn btn-primary" @onclick="GotoNextByKey">
-                        <i class="bi bi-plus-circle"></i>
-                    </button>
-                </div>
-            </div>
-        </div>
-    </div>
-
 
 </div>
 
@@ -148,23 +85,22 @@
 </div>
 
 
-
 @if (LanguageEntry != null)
 {
-    <div class="row g-1 pt-3">
-        <div class="col-2">
-            <Label class="form-control text-center dark-white-label" disabled="disabled">id</Label>
-        </div>
-        <div class="col-10">
-            <input class="form-control" disabled="disabled" value="@LanguageEntry.Id"/>
-        </div>
+<div class="row g-1 pt-4">
+    <div class="col-2">
+        <Label class="form-control text-center dark-white-label" disabled="disabled">id</Label>
     </div>
-    <div class="row pt-1 g-1">
-        <div class="col-2">
-            <Label class="form-control text-center dark-white-label" disabled="disabled">key</Label>
-        </div>
-        <div class="col-10">
-            <input class="form-control key-input" value="@LanguageEntry.Key"/>
-        </div>
+    <div class="col-10">
+        <input class="form-control" disabled="disabled" value="@LanguageEntry.Id"/>
     </div>
+</div>
+<div class="row pt-1 pb-2 g-1">
+    <div class="col-2">
+        <Label class="form-control text-center dark-white-label" disabled="disabled">key</Label>
+    </div>
+    <div class="col-10">
+        <input class="form-control key-input" value="@LanguageEntry.Key"/>
+    </div>
+</div>
 }
